--- a/src/app/actores/editar-actores/editar-actores.component.html
+++ b/src/app/actores/editar-actores/editar-actores.component.html
@@ -1,1 +1,5 @@
-El id del actor a editar es: {{id}}
+<h2>
+  Editar Actor
+</h2>
+
+<app-formulario-actores (posteoFormulario)="guardarCambios($event)" [modelo]="actor"></app-formulario-actores>
