--- a/src/app/generos/crear-generos/crear-generos.component.html
+++ b/src/app/generos/crear-generos/crear-generos.component.html
@@ -1,4 +1,3 @@
-<button mat-flat-button color="primary" type="button" (click)="guardarCambios()">
-  <mat-icon>add</mat-icon>
-  Guardar Cambios
-</button>
+<h2>Crear Genero</h2>
+
+<app-formulario-genero (posteoFormulario)="guardarCambios($event)"></app-formulario-genero>
