--- a/src/app/generos/editar-genero/editar-genero.component.html
+++ b/src/app/generos/editar-genero/editar-genero.component.html
@@ -1,1 +1,2 @@
-El id del genero a editar es: {{id}}
+<h2>Editar Genero</h2>
+<app-formulario-genero (posteoFormulario)="guardarCambios($event)" [modelo]="genero" ></app-formulario-genero>
