--- a/src/styles.css
+++ b/src/styles.css
@@ -8,5 +8,21 @@ body { height: fit-content;
   "Helvetica Neue", sans-serif
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  height: fit-content;
+}
+
+form button {
+  margin-right: 1rem;
+}
+
+mat-form-field {
+  width: 100%;
+  max-width: 500px;
+  display: block !important;
+  margin-top: 1rem;
+}
+
+.contenedor-button {
+  margin-top: 1rem;
+}
